--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   height: 80vh;
   width: 340px;
+  z-index: 10;
 }
 
 .loader_text {
@@ -19,8 +20,28 @@
 }
 
 .loader_sound {
+  position: relative;
+  display: inline-block;
   font-size: 1rem;
   color: #FFE4C9;
+}
+
+.loader_sound::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #FFE4C9;
+  transform-origin: bottom right;
+  transition: transform 0.5s ease-out;
+}
+
+.loader_sound:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 .loader {
